--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-flask==2.0.1
-flask-cors==3.0.10
-flask-socketio==5.1.1
-opencv-python==4.5.3.56
-numpy==1.21.2
-onnxruntime==1.8.1
-python-dotenv==0.19.0
-psutil==5.8.0
-boto3==1.18.44
-botocore==1.21.44
-python-engineio>=4.0.0
-python-socketio>=5.0.0
+flask==3.0.3
+flask-cors==4.0.0
+flask-socketio==5.3.6
+opencv-python==4.11.0.86
+numpy==1.26.4
+onnxruntime==1.17.1
+python-dotenv==1.0.1
+psutil==5.9.8
+boto3==1.34.54
+botocore==1.34.54
+python-engineio==4.9.0
+python-socketio==5.11.2
+requests==2.31.0
